# rargz

./: .cargoignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
