[package]
name = "rargz"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Frank Stallion <frank.stallion@ojefe.com>"]
description = "Fast parallel tar + zstd archiver and extractor with optional chunked format."
license = "MIT"
readme = "README.md"
repository = "https://github.com/fibnas/rargz"
homepage = "https://github.com/fibnas/rargz"
documentation = "https://docs.rs/rargz"
keywords = ["tar", "zstd", "archive", "compression", "cli"]
categories = ["compression", "command-line-utilities", "filesystem"]

[[bin]]
name = "rargz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
num_cpus = "1.16"
rayon = "1.10"
tar = "0.4"
walkdir = "2.5"
zstd = { version = "0.13", features = ["zstdmt"] }
indicatif = "0.17"
atty = "0.2"
